syntax="proto3";

package episodes.v1;

option go_package = "github.com/ElladanTasartir/buffy-grpc/gen/go/episodes/v1;episodes_v1;";

service EpisodesService {
  rpc GetEpisode(EpisodeRequest) returns (EpisodeResponse) {}
  rpc GetSeason(SeasonRequest) returns (SeasonResponse) {}
}

message Episode {
  string id = 1;
  string name = 2;
  string description = 3;
  string trivia = 4;
  string screenshot = 5;
}

message EpisodeRequest {
  int32 season = 1;
  int32 episode = 2;
}

message EpisodeResponse {
  Episode episode = 1;
}

message SeasonRequest {
  int32 season = 1;
}

message SeasonResponse {
  repeated Episode episodes = 1;
}